--- a/static/global.css
+++ b/static/global.css
@@ -1,21 +1,29 @@
 * {
-    color: black;
+  color: black;
 }
 
-html, body, ul, dl, dt, dd, h1, h2, h3 {
-    margin: 0;
+html,
+body,
+ul,
+dl,
+dt,
+dd,
+h1,
+h2,
+h3 {
+  margin: 0;
 }
 
 html {
-    min-height: 0;
-    height: auto;
-    margin: 0;
-    border: 0;
-    padding: 0;
+  min-height: 0;
+  height: auto;
+  margin: 0;
+  border: 0;
+  padding: 0;
 }
 
 body {
-    margin: 0;
-    border: 0;
-    padding: 0;
+  margin: 0;
+  border: 0;
+  padding: 0;
 }
